--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                         <div class="col-md-4">
                                             <label class="form-label required">手機號碼</label>
                                             <input type="tel" class="form-control" placeholder="0912-345-678"
-                                                id="info_sellphone">
+                                                id="info_cellphone">
                                         </div>
                                         <div class="col-md-6">
                                             <label class="form-label required">Email</label>
