新增 即時預覽 語文/證照資訊

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
                     <a href="#skill-section" class="list-group-item list-group-item-action border-0 p-3"><i
                             class="bi bi-tools me-2"></i> 專長技能</a>
-                    <a href="#skill-section" class="list-group-item list-group-item-action border-0 p-3"><i
+                    <a href="#lang-section" class="list-group-item list-group-item-action border-0 p-3"><i
                             class="bi bi-globe-americas me-2"></i> 語文能力</a>
-                    <a href="#skill-section" class="list-group-item list-group-item-action border-0 p-3"><i
+                    <a href="#cer-section" class="list-group-item list-group-item-action border-0 p-3"><i
                             class="bi bi-award me-2"></i> 專業證照</a>
 
                     <a href="#bio-section" class="list-group-item list-group-item-action border-0 p-3"><i
