--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body onload="initPage()">
 
     <nav class="resume-nav p-3 mb-4 shadow no-print">
-        <div class="container d-flex justify-content-between align-items-center">
-            <img class="h-auto" src="images/kenconts_logo.png" alt="kenconts logo">
-            <h4 class="m-0 fw-bold"><i class="bi bi-briefcase-fill me-2"></i>專業人才履歷系統</h4>
-            <div>
-                <button type="button" class="btn btn-outline-light me-2 d-none d-md-inline-block"
-                    onclick="showPreview()">
+        <div class="container d-flex justify-content-between align-items-center flex-wrap gap-3">
+            <img class="img-fluid" src="images/kenconts_logo_s.png" alt="kenconts logo">
+
+            <h1 class="m-0 fw-bold fs-4 d-inline-block"><i class="bi bi-briefcase-fill me-2"></i>專業人才履歷系統</h1>
+            <div class="ms-auto ms-lg-0">
+                <button type="button" class="btn btn-outline-light me-2" onclick="showPreview()">
                     <i class="bi bi-eye me-1"></i> 即時預覽
                 </button>
                 <button type="button" class="btn btn-light text-primary fw-bold" onclick="saveData()">儲存發布</button>
@@ -272,9 +272,9 @@
                 </div>
                 <div class="modal-footer no-print">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">返回編輯</button>
-                    <button type="button" class="btn btn-primary" onclick="window.print()">
+                    <!-- <button type="button" class="btn btn-primary" onclick="window.print()">
                         <i class="bi bi-printer me-1"></i> 列印 / 儲存 PDF
-                    </button>
+                    </button> -->
                 </div>
             </div>
         </div>
