調整 即時預覽頁面

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                         </div>
                                         -->
                                         <!-- 上傳照片 -->
-                                        <div class="photo-box mb-2" id="photoBox">
+                                        <div class="photo-box" id="photoBox">
                                             <img id="photoPreview"
                                                 style="width:100%; height:100%; object-fit:cover; display:none;">
                                             <div id="photoPlaceholder" class="d-flex flex-column">
@@ -81,7 +81,7 @@
                                                 <span class="small">上傳照片</span>
                                             </div>
                                         </div>
-                                        <small class="text-muted">建議直式 4:5</small>
+                                        <!-- <small class="text-muted">建議直式 4:5</small> -->
                                         <input type="file" id="photoInput" accept="image/*" style="display:none">
                                     </div>
                                     <div class="col-md-9 row g-3">
@@ -261,7 +261,7 @@
     </div>
 
     <div class="modal fade" id="previewModal" tabindex="-1">
-        <div class="modal-dialog modal-xl">
+        <div class="modal-dialog mx-auto">
             <div class="modal-content">
                 <div class="modal-header bg-dark text-white no-print">
                     <h5 class="modal-title">履歷預覽模式</h5>
